<resources>
    <string name="app_name" translatable="false">Coinomi (dev)</string>
    <string name="app_package" translatable="false">com.coinomi.wallet.dev</string>
    <string name="coinomi_website" translatable="false">https://coinomi.com</string>
    <string name="almost_equal_to" translatable="false">≈</string>
    <string name="action_scan_qr_code">Scan</string>
    <string name="action_share">Share</string>
    <string name="action_copy">Copy</string>
    <string name="action_edit_label">Edit label</string>
    <string name="action_empty_wallet">Use all funds</string>
    <string name="action_sweep_wallet">Sweep wallet</string>
    <string name="action_settings">Settings</string>
    <string name="action_support">Contact support</string>
    <string name="action_about">About</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_sign_verify_message">Sign/verify message</string>
    <string name="action_account_details">Account details</string>
    <string name="action_exchange_history">Exchange history</string>
    <string name="action_new_address">New address</string>
    <string name="action_swap_coins">Swap coins</string>
    <string name="action_delete">Delete</string>
    <string name="action_change_address_type">Change address type</string>
    <string name="error_generic">Error occurred while performing action</string>
    <string name="error_could_not_read_wallet">Could not read wallet</string>
    <string name="error_camera">Could not access the device camera</string>
    <string name="button_ok">OK</string>
    <string name="button_next">Next</string>
    <string name="button_finish">Finish</string>
    <string name="button_return">Return</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_default">Default</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_delete">Delete</string>
    <string name="button_add">Add</string>
    <string name="button_save">Save</string>
    <string name="button_remove">Remove</string>
    <string name="button_edit">Edit</string>
    <string name="button_send">Send</string>
    <string name="button_sign">Sign</string>
    <string name="button_verify">Verify</string>
    <string name="button_skip">Skip</string>
    <string name="button_retry">Retry</string>
    <string name="button_download">Download</string>
    <string name="button_agree">Agree</string>
    <string name="button_disagree">Disagree</string>
    <string name="button_add_coins">+ Coins</string>
    <string name="button_execute">Execute</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="erase_address">Erase address</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="wallet_title_request">receive</string>
    <string name="wallet_title_balance">balance</string>
    <string name="wallet_title_send">send</string>
    <string name="wallet_locked_message">Your wallet is locked</string>
    <string name="wallet_is_not_locked_message">Your wallet is not locked</string>
    <string name="unlock_wallet_title">Unlock your wallet</string>
    <string name="unlocking_wallet_working">Unlocking your wallet&#8230;</string>
    <string name="unlocking_wallet_error_title">Could not unlock your wallet</string>
    <string name="unlocking_wallet_error_detail">Are you using the correct password? Please make sure that your password was entered correctly. Attempt to restore using the recovery phrase if this error persists.</string>
    <string name="powered_by">Powered by</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_services">Services</string>
    <string name="navigation_drawer_wallet">Wallet</string>
    <string name="fee">Transaction fee</string>
    <string name="send">Send</string>
    <string name="trade">Exchange</string>
    <string name="receive">Receive</string>
    <string name="welcome_text">Welcome to Coinomi wallet</string>
    <string name="create_wallet">Create a new wallet</string>
    <string name="restore_wallet">Restore a wallet</string>
    <string name="test_wallet">Test wallet</string>
    <string name="override_wallet_warning_title">Override existing wallet?</string>
    <string name="override_new_wallet_warning_message">If you create a new wallet, your existing wallet will be lost unless you backed up you <i>recovery phrase</i>.</string>
    <string name="override_restore_wallet_warning_message">If you restore a wallet, your existing wallet will be lost unless you backed up you <i>recovery phrase</i>.</string>
    <string name="incompatible_device_warning_title">Incompatible device</string>
    <string name="incompatible_device_warning_message">This device cannot perform certain cryptographic functions due to software or hardware bugs.\nThis could be solved with an update from the device manufacturer.\n\nContact us if you have any questions: support@coinomi.com</string>
    <string name="seed_info">This is your <i>recovery phrase</i>, which is used to generate the keys for your wallet. Please write it down on a paper and keep it in a secure place, as you would with paper money. Anyone with access to it has access to the wallet\'s funds.\nIf you lose your recovery phrase, your wallet cannot be recovered.</string>
    <string name="seed_title">Your recovery phrase</string>
    <string name="seed_regenerate_title">Touch to generate a new recovery phrase</string>
    <string name="backed_up_seed">I have safely stored my recovery phrase</string>
    <string name="restore_info">Please enter your recovery phrase:</string>
    <string name="restore_seed_protected">Use a BIP39 passphrase</string>
    <string name="restore_skip_title">Skipping verification</string>
    <string name="restore_skip_info1">Please make sure that your recovery phrase matches the following:</string>
    <string name="restore_skip_info2">It is recommended not to skip verification, so that any misspellings could be detected.</string>
    <string name="restore_error_checksum">Recovery phrase is not valid. Check if some words are misspelled.</string>
    <string name="restore_error_words">Recovery phrase contains unrecognized words.</string>
    <string name="restore_error_mismatch">Recovery phrase entered does not match your recovery phrase.</string>
    <string name="restore_error">Could not verify your recovery phrase. %1$s</string>
    <string name="extra_entropy">Extra entropy</string>
    <string name="test_wallet_message">This is a test wallet, where you can send and receive testnet Bitcoins, Litecoin and Dogecoins.\n\nIf you want to use the wallet with real money please go to: <b>Settings &gt; Restore wallet &gt; Create a new wallet</b>.</string>
    <string name="wallet_update_title">New version available</string>
    <string name="wallet_update_message">A new version of Coinomi is available, it contains new features and fixes.</string>
    <string name="pay_with">Send with</string>
    <string name="exchange_and_pay_title">Exchange and send</string>
    <string name="ambiguous_address_title">Ambiguous address</string>
    <string name="ambiguous_address_message">Please select the correct coin type</string>
    <string name="wallet_transactions_coinbase">Mined</string>
    <string name="history_empty">No coins received so far!\n\nYou can get some through an exchange, trading and selling goods or services.</string>
    <string name="sent_to">sent to</string>
    <string name="received_with">received with</string>
    <string name="received_from">received from</string>
    <string name="get_tx_info_error">Could not get transaction information</string>
    <string name="disconnected_label">No connection</string>
    <string name="no_wallet_pocket_selected">No wallet account selected</string>
    <string name="get_tx_broadcast_error">Transaction broadcast error</string>
    <string name="receive_address_label">My address</string>
    <string name="create_new_address">Create a new address?</string>
    <string name="create_new_address_name">Name (optional)</string>
    <string name="view_previous_addresses">Previous addresses</string>
    <string name="too_many_unused_addresses">Too many unused addresses, try to use one of the previous addresses before creating a new one.</string>
    <string name="send_coins_activity_title">Send coins</string>
    <string name="send_coins_fragment_receiving_address_label">Pay to</string>
    <string name="send_coins_fragment_receiving_address_tip">name or address</string>
    <string name="send_coins_fragment_receiving_address_error">Invalid Bitcoin Address!</string>
    <string name="send_coins_fragment_amount_label">Amount to pay</string>
    <string name="send_coins_fragment_button_send">Send</string>
    <string name="send_coins_fragment_button_back">Back</string>
    <string name="send_coins_failed_msg">Failed!</string>
    <string name="send_coins_error_network">Could not connect to the coin network</string>
    <string name="send_coins_error_dust">The sending amount is too small and will be rejected by the network</string>
    <string name="send_coins_error">Could not send coins: %1$s</string>
    <string name="pay_to_label">Pay to</string>
    <string name="amount_to_send_label">Amount</string>
    <string name="scan_error">There was a problem scanning: %1$s</string>
    <string name="unsupported_coin">Coin \"%1$s\" is not supported.</string>
    <string name="address_error">The provided address is not valid.</string>
    <string name="amount_error">The provided amount is not valid</string>
    <string name="amount_error_empty">Please enter an amount</string>
    <string name="amount_error_negative">Cannot send a negative amount</string>
    <string name="amount_error_too_small">The minimum amount is at least %1$s</string>
    <string name="amount_error_not_enough_money_plain">Not enough money</string>
    <string name="amount_warn_fees_apply">Slightly less will be sent because of fees</string>
    <string name="set_password_info">Set a password to protect your wallet in everyday use.</string>
    <string name="set_password1">Type your password</string>
    <string name="set_password2">Re-type your password</string>
    <string name="passwords_mismatch">Passwords don\'t match</string>
    <string name="pref_title_restore_wallet">Restore wallet</string>
    <string name="pref_title_exchange_rates">Exchange rates</string>
    <string name="pref_title_manual_receiving_addresses">Manual receiving addresses</string>
    <string name="pref_summary_manual_receiving_addresses">Do not automatically create a new address for every transaction</string>
    <string name="title_activity_show_seed">Show recovery phrase</string>
    <string name="title_activity_debugging">Debugging</string>
    <string name="trade_info">Select the coins you wish to exchange.\nThe converted coins will be automatically added to your wallet.</string>
    <string name="trade_info_rates">Given rate includes ShapeShift.io transaction fee</string>
    <string name="trade_from_coin_label">Exchange</string>
    <string name="trade_to_coin_label">Receive</string>
    <string name="trade_warn_no_account_found">You will be prompted to add a %1$s wallet</string>
    <string name="signing_info">You can sign or verify a message using an address.</string>
    <string name="signing_address_label">Signing address</string>
    <string name="message_to_sign_label">Message</string>
    <string name="signature_label">Signature</string>
    <string name="message_signed">Message signed</string>
    <string name="title_activity_transaction_fees">Transaction fees</string>
</resources>