<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference android:title="@string/pref_title_exchange_rates" >
        <intent android:targetPackage="@string/app_package"
            android:targetClass="com.coinomi.wallet.ui.ExchangeRatesActivity" />
    </Preference>

    <Preference android:title="@string/title_activity_transaction_fees" >
        <intent android:targetPackage="@string/app_package"
            android:targetClass="com.coinomi.wallet.ui.FeesSettingsActivity" />
    </Preference>

    <Preference android:title="@string/title_activity_show_seed" >
        <intent android:targetPackage="@string/app_package"
            android:targetClass="com.coinomi.wallet.ui.ShowSeedActivity" />
    </Preference>

    <Preference android:title="@string/pref_title_restore_wallet" >
        <intent android:targetPackage="@string/app_package"
            android:targetClass="com.coinomi.wallet.ui.IntroActivity" />
    </Preference>

    <CheckBoxPreference
        android:key="manual_receiving_addresses"
        android:title="@string/pref_title_manual_receiving_addresses"
        android:summary="@string/pref_summary_manual_receiving_addresses"
        android:defaultValue="false"/>

    <Preference android:title="@string/title_activity_debugging" >
        <intent android:targetPackage="@string/app_package"
            android:targetClass="com.coinomi.wallet.ui.DebuggingActivity" />
    </Preference>
</PreferenceScreen>