<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SendFragment" >

    <item android:id="@+id/action_copy"
        android:title="@string/action_copy"
        android:icon="@drawable/abc_ic_menu_copy_mtrl_am_alpha"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_edit_label"
        android:title="@string/action_edit_label"
        android:icon="@drawable/edit_menu"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_new_address"
        android:title="@string/action_new_address"
        android:icon="@drawable/plus_menu"
        app:showAsAction="ifRoom" />
</menu>
