<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                style="@style/NormalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/trade_info" />

            <TextView
                style="@style/SmallHelpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:gravity="bottom"
                android:text="@string/trade_info_rates" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:id="@+id/coins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/trade_from_coin_label"
                        android:textColor="@color/gray_54_sec_text_icons" />

                    <Spinner
                        android:id="@+id/from_coin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/trade_to_coin_label"
                        android:textColor="@color/gray_54_sec_text_icons" />

                    <Spinner
                        android:id="@+id/to_coin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/warn_no_account_found"
                        style="@style/WarningText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/trade_warn_no_account_found" />
                </LinearLayout>
            </LinearLayout>


            <TextView
                android:id="@+id/amount_to_send_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/amount_to_send_label"
                android:textColor="@color/gray_54_sec_text_icons" />

            <LinearLayout
                android:id="@+id/amounts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.coinomi.wallet.ui.widget.AmountEditView
                    android:id="@+id/trade_coin_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />

                <com.coinomi.wallet.ui.widget.AmountEditView
                    android:id="@+id/receive_coin_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />

            </LinearLayout>

            <TextView
                android:id="@+id/amount_error_message"
                style="@style/ErrorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/amount_error" />

            <TextView
                android:id="@+id/amount_warning_message"
                style="@style/WarningText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/amount_warn_fees_apply" />

            <!-- TODO add advanced mode -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/pay_to_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/pay_to_label"
                    android:textColor="@color/gray_54_sec_text_icons" />

                <!-- TODO make android:imeOptions="actionNext" work -->
                <AutoCompleteTextView
                    android:id="@+id/custom_receive_address"
                    style="@style/NormalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/pay_to_label"
                    android:layout_toLeftOf="@id/scan_qr_code"
                    android:layout_toStartOf="@id/scan_qr_code"
                    android:completionThreshold="1"
                    android:hint="@string/send_coins_fragment_receiving_address_tip"
                    android:imeOptions="actionNext|flagNoExtractUi"
                    android:inputType="textMultiLine|textNoSuggestions"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/address_error_message"
                    style="@style/ErrorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/custom_receive_address"
                    android:text="@string/address_error" />

                <ImageButton
                    android:id="@+id/scan_qr_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@+id/custom_receive_address"
                    android:contentDescription="@string/scan_qr_code"
                    android:src="@drawable/qr_code" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom">

            <include
                layout="@layout/powered_by_shapeshift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/button_next"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:id="@+id/button_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/button_next" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>