<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WalletSendCoins">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusableInTouchMode="true"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    style="@style/NormalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:text="@string/signing_info" />

                <TextView
                    android:id="@+id/signing_address_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/signing_address_label"
                    android:textColor="@color/gray_54_sec_text_icons" />

                <AutoCompleteTextView
                    android:id="@+id/signing_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/NormalText"
                    android:imeOptions="actionNext|flagNoExtractUi"
                    android:completionThreshold="1"
                    android:singleLine="true"
                    android:inputType="textNoSuggestions"
                    tools:text="1KUDsEDqSBAgxubSEWszoA9xscNRRCmujM"/>

                <TextView
                    android:id="@+id/address_error_message"
                    style="@style/ErrorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/message_to_sign_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/message_to_sign_label"
                    android:textColor="@color/gray_54_sec_text_icons" />

                <EditText
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    tools:text="test"/>

                <TextView
                    android:id="@+id/signature_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/signature_label"
                    android:textColor="@color/gray_54_sec_text_icons" />

                <EditText
                    android:id="@+id/signature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine|textNoSuggestions"
                    android:ems="10"
                    tools:text="IMBbIFDDuUwomYlvSjwWytqP/CXYym2yOKbJUx8Y+ujzZKBwoCFMr73GUxpr1Ird/DvnNZcsQLphvx18ftqN54o="/>

                <TextView
                    android:id="@+id/signature_ok"
                    style="@style/OkText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:text="@string/message_signed"
                    tools:visibility="visible"/>

                <TextView
                    android:id="@+id/signature_error"
                    style="@style/ErrorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|end">
                <Button
                    android:id="@+id/button_verify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_verify" />

                <Button
                    android:id="@+id/button_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_sign" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
